--- a/src/views/SetupStep1.fxml
+++ b/src/views/SetupStep1.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
    <Label layoutX="246.0" layoutY="53.0" text="Creador de hoteles" />
    <TextField fx:id="setupTxtName" layoutX="220.0" layoutY="113.0" promptText="Nombre" />
    <TextField fx:id="setupTxtAddress" layoutX="220.0" layoutY="169.0" promptText="Direccion" />
@@ -15,7 +15,7 @@
    <Button fx:id="setupBtnCreate" layoutX="231.0" layoutY="284.0" mnemonicParsing="false" onMouseClicked="#createHotel" text="Siguiente paso -&gt;" />
    <Button fx:id="setupBtnBack" layoutX="32.0" layoutY="46.0" mnemonicParsing="false" onMouseClicked="#toHome" text="&lt;- Volver" />
    <Label layoutX="229.0" layoutY="210.0" text="Estrellas" />
-   <Label fx:id="setupLabelError" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="332.0" prefHeight="39.0" prefWidth="574.0" text="ERROR" textFill="RED" visible="false">
+   <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="332.0" prefHeight="39.0" prefWidth="574.0" text="ERROR" textFill="RED" visible="false">
       <font>
          <Font size="27.0" />
       </font>
