--- a/src/views/Home.fxml
+++ b/src/views/Home.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
    <children>
       <Label contentDisplay="BOTTOM" layoutX="208.0" layoutY="57.0" text="Bienvenido al Asistente de Hoteles" />
       <Button fx:id="homeBtnCreate" layoutX="14.0" layoutY="212.0" mnemonicParsing="false" onMouseClicked="#toSetup" prefHeight="31.0" prefWidth="273.0" text="Quiero crear un hotel nuevo" />
