--- a/src/views/SetupStep3.fxml
+++ b/src/views/SetupStep3.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
    <children>
       <TextField fx:id="setupStep3TxtName" layoutX="390.0" layoutY="92.0" promptText="Nombre" />
       <TextField fx:id="setupStep3TxtDNI" layoutX="390.0" layoutY="136.0" promptText="DNI" />
@@ -44,7 +44,7 @@
             </TableColumn>
          </columns>
       </TableView>
-      <Label fx:id="setupStep3LabelError" alignment="CENTER" contentDisplay="CENTER" layoutX="359.0" layoutY="352.0" prefHeight="39.0" prefWidth="206.0" text="ERROR" textFill="RED" visible="false">
+      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="359.0" layoutY="352.0" prefHeight="39.0" prefWidth="206.0" text="ERROR" textFill="RED" visible="false">
          <font>
             <Font size="27.0" />
          </font>
