--- a/src/views/SetupStep4.fxml
+++ b/src/views/SetupStep4.fxml
@@ -1,51 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import enums.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.control.cell.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
-   <children>
-      <TextField fx:id="setupStep4TxtNum" layoutX="378.0" layoutY="149.0" promptText="Num. habitacion" />
-      <TextField fx:id="setupStep4ComboReason" disable="true" layoutX="378.0" layoutY="234.0" promptText="Razon del Estado" />
-      <Button fx:id="setupStep4BtnEnd" layoutX="455.0" layoutY="284.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0" text="Terminar" />
-      <Label alignment="CENTER" layoutX="344.0" layoutY="89.0" prefHeight="18.0" prefWidth="221.0" text="Crear Recepcionistas" />
-      <Button fx:id="setupStep4BtnAdd" layoutX="367.0" layoutY="283.0" mnemonicParsing="false" onMouseClicked="#createRoom" prefHeight="26.0" prefWidth="82.0" text="+ Agregar" />
-      <ComboBox fx:id="setupStep4ComboStatus" layoutX="378.0" layoutY="189.0" onAction="#toggleReason" prefWidth="150.0" promptText="Estado de habitacion" visibleRowCount="3">
-          <items>
-              <FXCollections fx:factory="observableArrayList">
-                  <RoomStatusEnum fx:value="OCCUPIED" />
-                  <RoomStatusEnum fx:value="UNOCCUPIED" />
-                  <RoomStatusEnum fx:value="NOT_AVAILABLE" />
-              </FXCollections>
-          </items>
-      </ComboBox>
-      <TableView fx:id="setupStep4TableView" layoutX="14.0" layoutY="9.0" prefHeight="382.0" prefWidth="329.0" visible="false">
-        <columns>
-            <TableColumn prefWidth="52.79998779296875" text="Num.">
-                <cellValueFactory>
-                    <PropertyValueFactory property="roomNum" />
-                </cellValueFactory>
-            </TableColumn>
-            <TableColumn prefWidth="136.79998779296875" text="Estado">
-                <cellValueFactory>
-                    <PropertyValueFactory property="status" />
-                </cellValueFactory>
-            </TableColumn>
-            <TableColumn prefWidth="141.60003662109375" text="Razon">
-                <cellValueFactory>
-                    <PropertyValueFactory property="statusReason" />
-                </cellValueFactory>
-            </TableColumn>
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+    <children>
+        <TextField fx:id="setupStep4TxtName" layoutX="394.0" layoutY="147.0" promptText="Nombre" />
+      <TextField fx:id="setupStep4TxtCapacity" layoutX="395.0" layoutY="187.0" promptText="Capacidad" />
+        <TextField fx:id="setupStep4TxtPrice" layoutX="395.0" layoutY="227.0" promptText="Precio" />
+        <Button fx:id="setupStep4BtnNext" layoutX="471.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#toSetupStep5" prefHeight="31.0" prefWidth="97.0" text="Siguiente -&gt;" />
+        <Label alignment="CENTER" layoutX="360.0" layoutY="87.0" prefHeight="18.0" prefWidth="221.0" text="Crear Tipos de Habitaciones" />
+        <Button fx:id="setupStep4BtnAdd" layoutX="367.0" layoutY="281.0" mnemonicParsing="false" onMouseClicked="#createRoomType" prefHeight="31.0" prefWidth="98.0" text="+ Agregar" />
+        <TableView fx:id="setupStep4TableView" layoutX="14.0" layoutY="9.0" prefHeight="382.0" prefWidth="329.0" visible="false">
+            <columns>
+                <TableColumn editable="false" prefWidth="135.20001220703125" text="Nombre">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="name" />
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn editable="false" prefWidth="95.20001220703125" text="Capacidad">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="capacity" />
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn editable="false" prefWidth="104.0" text="Precio">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="price" />
+                    </cellValueFactory>
+                </TableColumn>
             </columns>
-      </TableView>
-      <Label fx:id="setupStep4LabelError" alignment="CENTER" contentDisplay="CENTER" layoutX="360.0" layoutY="339.0" prefHeight="39.0" prefWidth="186.0" text="ERROR" textFill="RED" visible="false">
-         <font>
-            <Font size="27.0" />
-         </font>
-      </Label>
-   </children>
+        </TableView>
+        <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="360.0" layoutY="339.0" prefHeight="39.0" prefWidth="222.0" text="ERROR" textFill="RED" visible="false">
+            <font>
+                <Font size="27.0" />
+            </font>
+        </Label>
+    </children>
 </AnchorPane>
