--- a/src/views/SetupStep3.fxml
+++ b/src/views/SetupStep3.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -7,20 +8,24 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+<AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
    <children>
-      <TextField fx:id="setupStep3TxtName" layoutX="390.0" layoutY="92.0" promptText="Nombre" />
-      <TextField fx:id="setupStep3TxtDNI" layoutX="390.0" layoutY="136.0" promptText="DNI" />
-      <TextField fx:id="setupStep3TxtCountry" layoutX="390.0" layoutY="177.0" promptText="Pais" />
-      <TextField fx:id="setupStep3TxtAddress" layoutX="390.0" layoutY="220.0" promptText="Dirección" />
-      <PasswordField fx:id="setupStep3TxtPassword" layoutX="390.0" layoutY="265.0" promptText="Contraseña" />
-      <Button fx:id="setupStep3BtnNext" layoutX="465.0" layoutY="311.0" mnemonicParsing="false" onMouseClicked="#toSetupStep4" text="Siguiente -&gt;" />
-      <Label alignment="CENTER" layoutX="382.0" layoutY="39.0" prefHeight="18.0" prefWidth="165.0" text="Crear Recepcionistas" />
-      <Button fx:id="setupStep3BtnAdd" layoutX="361.0" layoutY="310.0" mnemonicParsing="false" onMouseClicked="#createReceptionist" prefHeight="31.0" prefWidth="98.0" text="+ Agregar" />
-      <TableView fx:id="setupStep3TableView" layoutX="24.0" layoutY="15.0" prefHeight="371.0" prefWidth="327.0" visible="false">
+      <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/bg-setup3.jpg" />
+         </image>
+         <viewport>
+            <Rectangle2D />
+         </viewport>
+      </ImageView>
+      <Pane layoutX="559.0" layoutY="94.0" opacity="0.93" prefHeight="398.0" prefWidth="298.0" style="-fx-background-color: white;" />
+      <TableView fx:id="setupStep3TableView" layoutX="42.0" layoutY="49.0" opacity="0.93" prefHeight="487.0" prefWidth="327.0" visible="false">
          <columns>
             <TableColumn editable="false" prefWidth="85.60003662109375" resizable="false" text="Nombre">
                <cellValueFactory>
@@ -44,10 +49,23 @@
             </TableColumn>
          </columns>
       </TableView>
-      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="359.0" layoutY="352.0" prefHeight="39.0" prefWidth="206.0" text="ERROR" textFill="RED" visible="false">
+      <Pane fx:id="paneLabelError" layoutX="548.0" layoutY="513.0" opacity="0.67" prefHeight="46.0" prefWidth="320.0" style="-fx-background-color: red;" visible="false" />
+      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="559.0" layoutY="514.0" prefHeight="46.0" prefWidth="298.0" text="ERROR" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true">
          <font>
-            <Font size="27.0" />
+            <Font size="15.0" />
          </font>
       </Label>
+      <Button fx:id="setupStep3BtnAdd" layoutX="598.0" layoutY="438.0" mnemonicParsing="false" onMouseClicked="#createReceptionist" prefHeight="31.0" prefWidth="98.0" styleClass="success" text="+ Agregar" />
+      <Button fx:id="setupStep3BtnNext" layoutX="717.0" layoutY="438.0" mnemonicParsing="false" onMouseClicked="#toSetupStep4" prefHeight="31.0" prefWidth="98.0" styleClass="primary" text="Siguiente -&gt;" />
+      <Label alignment="CENTER" layoutX="575.0" layoutY="110.0" prefHeight="97.0" prefWidth="266.0" text="Crear Recepcionistas" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="31.0" />
+         </font>
+      </Label>
+      <TextField fx:id="setupStep3TxtName" layoutX="633.0" layoutY="215.0" prefWidth="151.0" promptText="Nombre" />
+      <TextField fx:id="setupStep3TxtDNI" layoutX="633.0" layoutY="259.0" prefWidth="151.0" promptText="DNI" />
+      <TextField fx:id="setupStep3TxtCountry" layoutX="633.0" layoutY="300.0" prefWidth="151.0" promptText="Pais" />
+      <TextField fx:id="setupStep3TxtAddress" layoutX="633.0" layoutY="343.0" prefWidth="151.0" promptText="Dirección" />
+      <PasswordField fx:id="setupStep3TxtPassword" layoutX="633.0" layoutY="388.0" prefWidth="151.0" promptText="Contraseña" />
    </children>
 </AnchorPane>
