--- a/src/views/SetupStep4.fxml
+++ b/src/views/SetupStep4.fxml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+<AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
     <children>
-        <TextField fx:id="setupStep4TxtName" layoutX="394.0" layoutY="147.0" promptText="Nombre" />
-      <TextField fx:id="setupStep4TxtCapacity" layoutX="395.0" layoutY="187.0" promptText="Capacidad" />
-        <TextField fx:id="setupStep4TxtPrice" layoutX="395.0" layoutY="227.0" promptText="Precio" />
-        <Button fx:id="setupStep4BtnNext" layoutX="471.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#toSetupStep5" prefHeight="31.0" prefWidth="97.0" text="Siguiente -&gt;" />
-        <Label alignment="CENTER" layoutX="360.0" layoutY="87.0" prefHeight="18.0" prefWidth="221.0" text="Crear Tipos de Habitaciones" />
-        <Button fx:id="setupStep4BtnAdd" layoutX="367.0" layoutY="281.0" mnemonicParsing="false" onMouseClicked="#createRoomType" prefHeight="31.0" prefWidth="98.0" text="+ Agregar" />
-        <TableView fx:id="setupStep4TableView" layoutX="14.0" layoutY="9.0" prefHeight="382.0" prefWidth="329.0" visible="false">
+        <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@img/bg-setup4.jpg" />
+            </image>
+            <viewport>
+                <Rectangle2D />
+            </viewport>
+        </ImageView>
+        <TableView fx:id="setupStep4TableView" layoutX="42.0" layoutY="49.0" opacity="0.93" prefHeight="487.0" prefWidth="327.0" visible="false">
             <columns>
                 <TableColumn editable="false" prefWidth="135.20001220703125" text="Nombre">
                     <cellValueFactory>
@@ -36,10 +42,22 @@
                 </TableColumn>
             </columns>
         </TableView>
-        <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="360.0" layoutY="339.0" prefHeight="39.0" prefWidth="222.0" text="ERROR" textFill="RED" visible="false">
-            <font>
-                <Font size="27.0" />
-            </font>
-        </Label>
+      <Pane layoutX="558.0" layoutY="119.0" opacity="0.93" prefHeight="347.0" prefWidth="298.0" style="-fx-background-color: white;" />
+      <Pane fx:id="paneLabelError" layoutX="547.0" layoutY="504.0" opacity="0.67" prefHeight="46.0" prefWidth="320.0" style="-fx-background-color: red;" visible="false" />
+      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="558.0" layoutY="504.0" prefHeight="46.0" prefWidth="298.0" text="ERROR" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+        <TextField fx:id="setupStep4TxtName" layoutX="630.0" layoutY="271.0" prefWidth="151.0" promptText="Nombre" />
+      <TextField fx:id="setupStep4TxtCapacity" layoutX="631.0" layoutY="311.0" prefWidth="151.0" promptText="Capacidad" />
+        <TextField fx:id="setupStep4TxtPrice" layoutX="631.0" layoutY="351.0" prefWidth="151.0" promptText="Precio" />
+        <Button fx:id="setupStep4BtnNext" layoutX="719.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#toSetupStep5" prefHeight="31.0" prefWidth="98.0" styleClass="primary" text="Siguiente -&gt;" />
+        <Label alignment="CENTER" layoutX="596.0" layoutY="145.0" prefHeight="93.0" prefWidth="221.0" text="Crear Tipos de Habitaciones" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="31.0" />
+         </font>
+      </Label>
+        <Button fx:id="setupStep4BtnAdd" layoutX="596.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#createRoomType" prefHeight="31.0" prefWidth="98.0" styleClass="success" text="+ Agregar" />
     </children>
 </AnchorPane>
