--- a/src/views/SetupStep5.fxml
+++ b/src/views/SetupStep5.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -7,52 +8,55 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.collections.FXCollections?>
-<?import enums.RoomStatusEnum?>
-<?import models.RoomType?>
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
+<AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
     <children>
-        <TextField fx:id="setupStep5TxtNum" layoutX="394.0" layoutY="147.0" promptText="Num. habitacion" />
-        <TextField fx:id="setupStep5ComboReason" disable="true" layoutX="394.0" layoutY="274.0" promptText="Razon del Estado" />
-        <Button fx:id="setupStep5BtnEnd" layoutX="471.0" layoutY="324.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="90.0" text="Terminar" />
-        <Label alignment="CENTER" layoutX="360.0" layoutY="87.0" prefHeight="18.0" prefWidth="221.0" text="Crear Habitaciones" />
-        <Button fx:id="setupStep5BtnAdd" layoutX="375.0" layoutY="323.0" mnemonicParsing="false" onMouseClicked="#createRoom" prefHeight="31.0" prefWidth="90.0" text="+ Agregar" />
-        <ComboBox fx:id="setupStep5ComboStatus" layoutX="394.0" layoutY="229.0" onAction="#toggleReason" prefWidth="150.0" promptText="Estado de habitacion" visibleRowCount="3">
-        <items>
-            <FXCollections fx:factory="observableArrayList">
-                <RoomStatusEnum fx:value="OCCUPIED" />
-                <RoomStatusEnum fx:value="UNOCCUPIED" />
-                <RoomStatusEnum fx:value="NOT_AVAILABLE" />
-            </FXCollections>
-        </items>
-        </ComboBox>
-        <TableView fx:id="setupStep5TableView" layoutX="14.0" layoutY="9.0" prefHeight="382.0" prefWidth="329.0" visible="false">
+        <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@img/bg-setup5.jpg" />
+            </image>
+            <viewport>
+                <Rectangle2D />
+            </viewport>
+        </ImageView>
+        <TableView fx:id="setupStep5TableView" layoutX="42.0" layoutY="49.0" prefHeight="487.0" prefWidth="327.0" visible="false">
             <columns>
                 <TableColumn editable="false" prefWidth="52.79998779296875" text="Num.">
                     <cellValueFactory>
                         <PropertyValueFactory property="roomNum" />
                     </cellValueFactory>
                 </TableColumn>
-                <TableColumn editable="false" prefWidth="136.79998779296875" text="Estado">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="status" />
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn editable="false" prefWidth="141.60003662109375" text="Razon">
+                <TableColumn fx:id="setupStep5TableColumnRoomType" editable="false" prefWidth="89.60000610351562" text="Tipo" />
+                <TableColumn fx:id="setupStep5TableColumnStatus" editable="false" prefWidth="92.0" text="Estado" />
+                <TableColumn editable="false" prefWidth="93.5999755859375" text="Razon">
                     <cellValueFactory>
                         <PropertyValueFactory property="statusReason" />
                     </cellValueFactory>
                 </TableColumn>
             </columns>
         </TableView>
-        <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="360.0" layoutY="339.0" prefHeight="39.0" prefWidth="222.0" text="ERROR" textFill="RED" visible="false">
-            <font>
-                <Font size="27.0" />
-            </font>
-        </Label>
-        <ComboBox fx:id="setupStep5ComboType" onMouseClicked="#loadRoomTypes" layoutX="394.0" layoutY="187.0" prefWidth="150.0" promptText="Tipo de habitacion" visibleRowCount="3"/>
+      <Pane layoutX="558.0" layoutY="119.0" opacity="0.93" prefHeight="347.0" prefWidth="298.0" style="-fx-background-color: white;" />
+      <Pane fx:id="paneLabelError" layoutX="547.0" layoutY="499.0" opacity="0.67" prefHeight="46.0" prefWidth="320.0" style="-fx-background-color: red;" visible="false" />
+      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="558.0" layoutY="500.0" prefHeight="46.0" prefWidth="298.0" text="ERROR" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+        <Label alignment="CENTER" layoutX="596.0" layoutY="135.0" prefHeight="92.0" prefWidth="222.0" text="Crear Habitaciones" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="31.0" />
+         </font>
+      </Label>
+        <TextField fx:id="setupStep5TxtNum" layoutX="633.0" layoutY="238.0" prefWidth="150.0" promptText="Num. habitacion" />
+        <TextField fx:id="setupStep5ComboReason" disable="true" layoutX="633.0" layoutY="365.0" prefWidth="150.0" promptText="Razon del Estado" />
+        <Button fx:id="setupStep5BtnEnd" layoutX="728.0" layoutY="415.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="90.0" styleClass="primary" text="Terminar" />
+        <Button fx:id="setupStep5BtnAdd" layoutX="596.0" layoutY="415.0" mnemonicParsing="false" onMouseClicked="#createRoom" prefHeight="31.0" prefWidth="90.0" styleClass="success" text="+ Agregar" />
+        <ComboBox fx:id="setupStep5ComboStatus" layoutX="633.0" layoutY="320.0" onAction="#toggleReason" onMouseClicked="#loadRoomStatus" prefWidth="150.0" promptText="Estado de habitacion" visibleRowCount="3" />
+        <ComboBox fx:id="setupStep5ComboType" layoutX="633.0" layoutY="278.0" onMouseClicked="#loadRoomTypes" prefWidth="150.0" promptText="Tipo de habitacion" visibleRowCount="3" />
     </children>
 </AnchorPane>
