--- a/src/views/Login.fxml
+++ b/src/views/Login.fxml
@@ -27,7 +27,7 @@
       </font>
    </Label>
    <TextField fx:id="loginTxtDni" layoutX="535.0" layoutY="285.0" prefWidth="150.0" promptText="DNI" />
-   <Button fx:id="loginBtn" layoutX="565.0" layoutY="379.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="90.0" styleClass="primary" text="Entrar" />
+   <Button fx:id="loginBtn" layoutX="565.0" layoutY="379.0" mnemonicParsing="false" onMouseClicked="#login" prefHeight="31.0" prefWidth="90.0" styleClass="primary" text="Entrar" />
    <PasswordField fx:id="loginTxtPassword" layoutX="535.0" layoutY="328.0" prefWidth="150.0" promptText="Contraseña" />
    <ImageView fx:id="loginStar1" fitHeight="48.0" fitWidth="48.0" layoutX="457.0" layoutY="454.0" pickOnBounds="true" preserveRatio="true" visible="false">
       <image>
