--- a/src/views/DashboardBookings.fxml
+++ b/src/views/DashboardBookings.fxml
@@ -5,13 +5,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
     <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
         <image>
@@ -21,26 +22,34 @@
             <Rectangle2D />
         </viewport>
     </ImageView>
-   <TableView layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
+   <TableView fx:id="dashboardTableView" layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
      <columns>
-       <TableColumn prefWidth="114.4000244140625" text="Num. Habitacion" />
-       <TableColumn minWidth="0.0" prefWidth="172.79998779296875" text="Checkin" />
-         <TableColumn minWidth="0.0" prefWidth="169.60003662109375" text="Checkout" />
-         <TableColumn minWidth="0.0" prefWidth="115.2000732421875" text="DNI" />
+         <TableColumn fx:id="dashboardTableColumnRoomNum" prefWidth="76.79998779296875" text="Num. Habitacion" />
+         <TableColumn fx:id="dashboardTableColumnCheckin" minWidth="0.0" prefWidth="138.4000244140625" text="Checkin" >
+             <cellValueFactory>
+                 <PropertyValueFactory property="startDate" />
+             </cellValueFactory>
+         </TableColumn>
+         <TableColumn fx:id="dashboardTableColumnCheckout" minWidth="0.0" prefWidth="141.5999755859375" text="Checkout" >
+             <cellValueFactory>
+                 <PropertyValueFactory property="expectedFinishDate" />
+             </cellValueFactory>
+         </TableColumn>
+         <TableColumn fx:id="dashboardTableColumnStatus" minWidth="0.0" prefWidth="107.2000732421875" text="Estado" />
+         <TableColumn fx:id="dashboardTableColumnDetails" minWidth="0.0" prefWidth="107.2000732421875" text="Detalles" />
      </columns>
    </TableView>
    <Pane layoutX="33.0" layoutY="74.0" opacity="0.93" prefHeight="43.0" prefWidth="206.0" style="-fx-background-color: white;" />
-   <Button layoutX="33.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#toDashboardHome" prefHeight="63.0" prefWidth="206.0" text="Inicio" />
-   <Button layoutX="33.0" layoutY="148.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toDashboardUsers" prefHeight="63.0" prefWidth="206.0" text="Usuarios" />
-   <Button disable="true" layoutX="33.0" layoutY="179.0" mnemonicParsing="false" opacity="0.75" prefHeight="63.0" prefWidth="206.0" text="Reservas" />
-   <Button layoutX="33.0" layoutY="210.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toAdminPanel" prefHeight="63.0" prefWidth="206.0" text="Admin Panel" />
-   <Button layoutX="33.0" layoutY="476.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#logout" prefHeight="63.0" prefWidth="206.0" text="Salir" />
+   <Button fx:id="btnMenuDashboardHome" layoutX="33.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#toDashboardHome" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Inicio" />
+   <Button fx:id="btnMenuDashboardUsers" layoutX="33.0" layoutY="148.0" mnemonicParsing="false" onMouseClicked="#toDashboardUsers" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Usuarios" />
+   <Button fx:id="btnMenuDashboardBookings" disable="true" layoutX="33.0" layoutY="179.0" mnemonicParsing="false" opacity="0.75" prefHeight="63.0" prefWidth="206.0" text="Reservas" />
+   <Button fx:id="btnMenuAdminPanel" layoutX="33.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#toAdminPanel" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Admin Panel" />
+   <Button layoutX="33.0" layoutY="476.0" mnemonicParsing="false" onMouseClicked="#logout" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Salir" />
    <Label alignment="CENTER" layoutX="64.0" layoutY="74.0" prefHeight="43.0" prefWidth="144.0" text="Menu" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="25.0" />
       </font>
    </Label>
-   <TextField layoutX="668.0" layoutY="35.0" prefHeight="31.0" prefWidth="134.0" promptText="Buscar..." />
-   <Button layoutX="802.0" layoutY="34.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="38.0" styleClass="primary" text="🔎" />
+   <ToggleButton layoutX="687.0" layoutY="33.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="153.0" text="Reservas terminadas" />
 
 </AnchorPane>
