--- a/src/views/DashboardHome.fxml
+++ b/src/views/DashboardHome.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
     <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
         <image>
@@ -20,20 +21,29 @@
             <Rectangle2D />
         </viewport>
     </ImageView>
-   <TableView layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
+   <TableView fx:id="dashboardTableView" layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
      <columns>
-       <TableColumn prefWidth="114.4000244140625" text="Num. Habitacion" />
-       <TableColumn minWidth="0.0" prefWidth="172.79998779296875" text="Checkin" />
-         <TableColumn minWidth="0.0" prefWidth="169.60003662109375" text="Checkout" />
-         <TableColumn minWidth="0.0" prefWidth="115.2000732421875" text="Estado" />
+        <TableColumn fx:id="dashboardTableColumnRoomNum" prefWidth="76.79998779296875" text="Num. Habitacion" />
+        <TableColumn fx:id="dashboardTableColumnCheckin" minWidth="0.0" prefWidth="138.4000244140625" text="Checkin" >
+            <cellValueFactory>
+                <PropertyValueFactory property="startDate" />
+            </cellValueFactory>
+        </TableColumn>
+         <TableColumn fx:id="dashboardTableColumnCheckout" minWidth="0.0" prefWidth="141.5999755859375" text="Checkout" >
+             <cellValueFactory>
+                 <PropertyValueFactory property="expectedFinishDate" />
+             </cellValueFactory>
+         </TableColumn>
+         <TableColumn fx:id="dashboardTableColumnStatus" minWidth="0.0" prefWidth="107.2000732421875" text="Estado" />
+         <TableColumn fx:id="dashboardTableColumnDetails" minWidth="0.0" prefWidth="107.2000732421875" text="Detalles" />
      </columns>
    </TableView>
    <Pane layoutX="33.0" layoutY="74.0" opacity="0.93" prefHeight="43.0" prefWidth="206.0" style="-fx-background-color: white;" />
    <Button disable="true" layoutX="33.0" layoutY="117.0" mnemonicParsing="false" opacity="0.75" prefHeight="63.0" prefWidth="206.0" text="Inicio" />
-   <Button layoutX="33.0" layoutY="148.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toDashboardUsers" prefHeight="63.0" prefWidth="206.0" text="Usuarios" />
-   <Button layoutX="33.0" layoutY="179.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toDashboardBookings" prefHeight="63.0" prefWidth="206.0" text="Reservas" />
-   <Button layoutX="33.0" layoutY="210.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toAdminPanel" prefHeight="63.0" prefWidth="206.0" text="Admin Panel" />
-   <Button layoutX="33.0" layoutY="476.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#logout" prefHeight="63.0" prefWidth="206.0" text="Salir" />
+   <Button fx:id="btnMenuDashboardUsers" layoutX="33.0" layoutY="148.0" mnemonicParsing="false" onMouseClicked="#toDashboardUsers" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Usuarios" />
+   <Button layoutX="33.0" layoutY="179.0" mnemonicParsing="false" onMouseClicked="#toDashboardBookings" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Reservas" />
+   <Button fx:id="btnMenuAdminPanel" layoutX="33.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#toAdminPanel" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Admin Panel" />
+   <Button layoutX="33.0" layoutY="476.0" mnemonicParsing="false" onMouseClicked="#logout" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Salir" />
    <Label alignment="CENTER" layoutX="64.0" layoutY="74.0" prefHeight="43.0" prefWidth="144.0" text="Menu" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="25.0" />
