--- a/src/views/DashboardUsers.fxml
+++ b/src/views/DashboardUsers.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -12,6 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
     <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
         <image>
@@ -21,20 +23,33 @@
             <Rectangle2D />
         </viewport>
     </ImageView>
-   <TableView layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
+   <TableView fx:id="dashboardUsersTableView" layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
      <columns>
-       <TableColumn prefWidth="114.4000244140625" text="DNI" />
-       <TableColumn minWidth="0.0" prefWidth="168.79998779296875" text="Nombre" />
-         <TableColumn minWidth="0.0" prefWidth="200.0" text="Direccion" />
-         <TableColumn minWidth="0.0" prefWidth="92.0" text="Rol" />
+       <TableColumn prefWidth="101.60003662109375" text="DNI" >
+           <cellValueFactory>
+               <PropertyValueFactory property="dni" />
+           </cellValueFactory>
+       </TableColumn>
+       <TableColumn minWidth="0.0" prefWidth="128.79998779296875" text="Nombre" >
+           <cellValueFactory>
+               <PropertyValueFactory property="name" />
+           </cellValueFactory>
+       </TableColumn>
+         <TableColumn minWidth="0.0" prefWidth="140.79998779296875" text="Direccion" >
+             <cellValueFactory>
+                 <PropertyValueFactory property="address" />
+             </cellValueFactory>
+         </TableColumn>
+         <TableColumn fx:id="dashboardTableColumnRole" minWidth="0.0" prefWidth="106.39996337890625" text="Rol" />
+         <TableColumn fx:id="dashboardTableColumnDetails" minWidth="0.0" prefWidth="92.800048828125" text="Detalles" />
      </columns>
    </TableView>
    <Pane layoutX="33.0" layoutY="74.0" opacity="0.93" prefHeight="43.0" prefWidth="206.0" style="-fx-background-color: white;" />
-   <Button layoutX="33.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#toDashboardHome" prefHeight="63.0" prefWidth="206.0" text="Inicio" />
+   <Button layoutX="33.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#toDashboardHome" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Inicio" />
    <Button disable="true" layoutX="33.0" layoutY="148.0" mnemonicParsing="false" opacity="0.75" prefHeight="63.0" prefWidth="206.0" text="Usuarios" />
-   <Button layoutX="33.0" layoutY="179.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toDashboardBookings" prefHeight="63.0" prefWidth="206.0" text="Reservas" />
-   <Button layoutX="33.0" layoutY="210.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#toAdminPanel" prefHeight="63.0" prefWidth="206.0" text="Admin Panel" />
-   <Button layoutX="33.0" layoutY="476.0" mnemonicParsing="false" opacity="0.93" onMouseClicked="#logout" prefHeight="63.0" prefWidth="206.0" text="Salir" />
+   <Button layoutX="33.0" layoutY="179.0" mnemonicParsing="false" onMouseClicked="#toDashboardBookings" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Reservas" />
+   <Button fx:id="btnMenuAdminPanel" layoutX="33.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#toAdminPanel" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Admin Panel" />
+   <Button layoutX="33.0" layoutY="476.0" mnemonicParsing="false" onMouseClicked="#logout" opacity="0.93" prefHeight="63.0" prefWidth="206.0" text="Salir" />
    <Label alignment="CENTER" layoutX="64.0" layoutY="74.0" prefHeight="43.0" prefWidth="144.0" text="Menu" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="25.0" />
@@ -42,5 +57,6 @@
    </Label>
    <TextField layoutX="668.0" layoutY="35.0" prefHeight="31.0" prefWidth="134.0" promptText="Buscar..." />
    <Button layoutX="802.0" layoutY="34.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="38.0" styleClass="primary" text="🔎" />
+   <ComboBox fx:id="dashboardUsersCombo" onMouseClicked="#loadComboDashboardUsers" layoutX="269.0" layoutY="34.0" prefHeight="50.0" prefWidth="134.0" promptText="Rol" />
 
 </AnchorPane>
