--- a/src/views/BookingDetails.fxml
+++ b/src/views/BookingDetails.fxml
@@ -52,4 +52,10 @@
    <TextField fx:id="bookingDetailsTxtPrice" disable="true" editable="false" layoutX="377.0" layoutY="399.0" prefWidth="177.0" promptText="Precio total" />
    <Button fx:id="bookingDetailsBtnConsumption" layoutX="612.0" layoutY="227.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="161.0" styleClass="primary" text="Agregar consumición" />
    <TextField fx:id="bookingDetailsTxtConsumption" layoutX="627.0" layoutY="181.0" prefWidth="126.0" promptText="Precio consumicion" />
+   <Pane fx:id="paneLabelError" layoutX="420.0" layoutY="524.0" opacity="0.67" prefHeight="46.0" prefWidth="320.0" style="-fx-background-color: red;" visible="false" />
+   <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="431.0" layoutY="525.0" prefHeight="46.0" prefWidth="298.0" text="ERROR" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true">
+      <font>
+         <Font size="15.0" />
+      </font>
+   </Label>
 </AnchorPane>
