more and more frontend

--- a/src/views/DashboardHome.fxml
+++ b/src/views/DashboardHome.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="586.0" prefWidth="879.0" stylesheets="@styles/bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewController">
     <ImageView fitHeight="586.0" fitWidth="879.0" pickOnBounds="true" preserveRatio="true">
         <image>
@@ -24,12 +24,12 @@
    <TableView fx:id="dashboardTableView" layoutX="269.0" layoutY="74.0" opacity="0.93" prefHeight="434.0" prefWidth="572.0">
      <columns>
         <TableColumn fx:id="dashboardTableColumnRoomNum" prefWidth="76.79998779296875" text="Num. Habitacion" />
-        <TableColumn fx:id="dashboardTableColumnCheckin" minWidth="0.0" prefWidth="138.4000244140625" text="Checkin" >
+        <TableColumn fx:id="dashboardTableColumnCheckin" minWidth="0.0" prefWidth="138.4000244140625" text="Checkin">
             <cellValueFactory>
                 <PropertyValueFactory property="startDate" />
             </cellValueFactory>
         </TableColumn>
-         <TableColumn fx:id="dashboardTableColumnCheckout" minWidth="0.0" prefWidth="141.5999755859375" text="Checkout" >
+         <TableColumn fx:id="dashboardTableColumnCheckout" minWidth="0.0" prefWidth="141.5999755859375" text="Checkout">
              <cellValueFactory>
                  <PropertyValueFactory property="expectedFinishDate" />
              </cellValueFactory>
@@ -47,6 +47,12 @@
    <Label alignment="CENTER" layoutX="64.0" layoutY="74.0" prefHeight="43.0" prefWidth="144.0" text="Menu" textAlignment="CENTER" wrapText="true">
       <font>
          <Font size="25.0" />
+      </font>
+   </Label>
+   <Pane fx:id="paneLabelError" layoutX="395.0" layoutY="524.0" opacity="0.67" prefHeight="46.0" prefWidth="320.0" style="-fx-background-color: red;" visible="false" />
+   <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="406.0" layoutY="525.0" prefHeight="46.0" prefWidth="298.0" text="ERROR" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true">
+      <font>
+         <Font size="15.0" />
       </font>
    </Label>
 
