--- a/src/views/AdminPanel.fxml
+++ b/src/views/AdminPanel.fxml
@@ -30,8 +30,8 @@
       </font>
    </Label>
    <Pane layoutX="302.0" layoutY="74.0" opacity="0.93" prefHeight="436.0" prefWidth="535.0" style="-fx-background-color: white;" />
-   <Button layoutX="477.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="185.0" styleClass="primary" text="Administrar habitaciones" />
-   <Button layoutX="447.0" layoutY="155.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="247.0" styleClass="primary" text="Administrar tipos de habitaciones" />
+   <Button layoutX="477.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="185.0" styleClass="primary" onMouseClicked="#toCreateRoom" text="Administrar habitaciones" />
+   <Button layoutX="447.0" layoutY="155.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="247.0" styleClass="primary" onMouseClicked="#toCreateRoomType" text="Administrar tipos de habitaciones" />
    <Button layoutX="466.0" layoutY="317.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="206.0" styleClass="success" onMouseClicked="#saveHotelBackup" text="Guardar copia de seguridad" />
    <Button layoutX="470.0" layoutY="370.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="198.0" styleClass="primary" onMouseClicked="#loadHotelBackup" text="Cargar copia de seguridad" />
    <Button layoutX="463.0" layoutY="262.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="213.0" styleClass="success" onMouseClicked="#saveHotel" text="Guardar informacion del hotel" />
