--- a/src/views/CreateRoomType.fxml
+++ b/src/views/CreateRoomType.fxml
@@ -40,7 +40,7 @@
                         <PropertyValueFactory property="price" />
                     </cellValueFactory>
                 </TableColumn>
-            <TableColumn prefWidth="94.40001220703124" text="Editar" />
+            <TableColumn fx:id="createRoomTypeTableColumnEdit" prefWidth="94.40001220703124" text="Editar" />
             </columns>
         </TableView>
       <Pane layoutX="558.0" layoutY="119.0" opacity="0.93" prefHeight="347.0" prefWidth="298.0" style="-fx-background-color: white;" />
@@ -50,15 +50,16 @@
             <Font size="15.0" />
          </font>
       </Label>
+        <TextField fx:id="createRoomTypeHiddenId" visible="false" layoutX="633.0" layoutY="238.0" prefWidth="150.0"/>
         <TextField fx:id="createRoomTypeTxtName" layoutX="630.0" layoutY="271.0" prefWidth="151.0" promptText="Nombre" />
       <TextField fx:id="createRoomTypeTxtCapacity" layoutX="631.0" layoutY="311.0" prefWidth="151.0" promptText="Capacidad" />
         <TextField fx:id="createRoomTypeTxtPrice" layoutX="631.0" layoutY="351.0" prefWidth="151.0" promptText="Precio" />
-        <Button fx:id="createRoomTypeBtnNext" layoutX="719.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#toSetupStep5" prefHeight="31.0" prefWidth="98.0" styleClass="primary" text="Terminar" />
+        <Button fx:id="createRoomTypeBtnNext" layoutX="719.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#toAdminPanel" prefHeight="31.0" prefWidth="98.0" styleClass="primary" text="Terminar" />
         <Label alignment="CENTER" layoutX="596.0" layoutY="145.0" prefHeight="93.0" prefWidth="221.0" text="Tipos de Habitaciones" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="31.0" />
          </font>
       </Label>
-        <Button fx:id="createRoomTypeBtnAdd" layoutX="596.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#createRoomType" prefHeight="31.0" prefWidth="98.0" styleClass="success" text="+ Agregar" />
+        <Button fx:id="createRoomTypeBtnAdd" layoutX="596.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#createRoomTypeAdminPanel" prefHeight="31.0" prefWidth="98.0" styleClass="success" text="+ Agregar" />
     </children>
 </AnchorPane>
