--- a/src/views/CreateUser.fxml
+++ b/src/views/CreateUser.fxml
@@ -57,7 +57,7 @@
          </font>
       </Label>
       <Button fx:id="createUserBtnAdd" layoutX="598.0" layoutY="438.0" mnemonicParsing="false" onMouseClicked="#createUser" prefHeight="31.0" prefWidth="98.0" styleClass="success" text="+ Agregar" />
-      <Button fx:id="createUserBtnNext" layoutX="717.0" layoutY="438.0" mnemonicParsing="false" onMouseClicked="#toAdminPanel" prefHeight="31.0" prefWidth="98.0" styleClass="primary" text="Terminar" />
+      <Button fx:id="createUserBtnNext" layoutX="717.0" layoutY="438.0" mnemonicParsing="false" onMouseClicked="#toDashboardUsers" prefHeight="31.0" prefWidth="98.0" styleClass="primary" text="Terminar" />
       <Label alignment="CENTER" layoutX="575.0" layoutY="110.0" prefHeight="46.0" prefWidth="266.0" text="Crear usuarios" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="31.0" />
