--- a/src/views/DashboardBookings.fxml
+++ b/src/views/DashboardBookings.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -50,12 +51,13 @@
          <Font size="25.0" />
       </font>
    </Label>
-   <ToggleButton layoutX="687.0" layoutY="33.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="153.0" text="Reservas terminadas" />
+   <ToggleButton fx:id="dashboardBookingsToggle" layoutX="687.0" layoutY="33.0" mnemonicParsing="false" onMouseClicked="#applyBookingsFilters" prefHeight="31.0" prefWidth="153.0" text="Reservas terminadas" />
    <Pane fx:id="paneLabelError" layoutX="395.0" layoutY="524.0" opacity="0.67" prefHeight="46.0" prefWidth="320.0" style="-fx-background-color: red;" visible="false" />
    <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="406.0" layoutY="525.0" prefHeight="46.0" prefWidth="298.0" text="ERROR" textAlignment="CENTER" textFill="WHITE" visible="false" wrapText="true">
       <font>
          <Font size="15.0" />
       </font>
    </Label>
+   <ComboBox onAction="#applyBookingsFilters" fx:id="dashboardBookingsComboRoomNum" layoutX="269.0" layoutY="33.0" prefWidth="144.0" promptText="Num habitacion" />
 
 </AnchorPane>
